Added link to github

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>World Clock</h1>
-    <footer>Coded by Amira Fareh</footer>
+    <footer>Coded by Amira Fareh and <a href="https://github.com/AmiraFareh/world-clock">open-sourced on Github</a></footer>
 </body>
 <script src="javascript/index.js"></script>
 </html>
