--- a/index.html
+++ b/index.html
@@ -8,7 +8,60 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>World Clock</h1>
+    <div class="container">
+        <h1>World Clock</h1>
+        <h2 class="current-time">
+            6:26:46 pm
+            <div class="current-timezone">
+                New Zealand Daylight Time
+            </div>
+           </h2>
+        <select name="cities" id="cities">
+            <option value="">Choose a city</option>
+            <option value="new-york">New York</option>
+            <option value="london">London</option>
+            <option value="paris">Paris</option>
+            <option value="california">California</option>
+        </select>
+        <div class="city">
+            <h3>New York</h3>
+            <div class="date">
+                Saturday, 25 March 2023
+            </div>
+            <div class="time">
+                1:39 am
+            </div>
+        </div>
+        <div class="city">
+            <h3>London</h3>
+            <div class="date">
+                Saturday, 25 March 2023
+            </div>
+            <div class="time">
+                1:39 am
+            </div>
+        </div>
+        <div class="city">
+            <h3>Paris</h3>
+            <div class="date">
+                Saturday, 25 March 2023
+            </div>
+            <div class="time">
+                1:39 am
+            </div>
+        </div>
+        <div class="city">
+            <h3>California</h3>
+            <div class="date">
+                Saturday, 25 March 2023
+            </div>
+            <div class="time">
+                1:39 am
+            </div>
+        </div>
+    </div>
+    
+
     <footer>Coded by Amira Fareh and <a href="https://github.com/AmiraFareh/world-clock">open-sourced on Github</a></footer>
 </body>
 <script src="javascript/index.js"></script>
