Styled the project with CSS

--- a/index.html
+++ b/index.html
@@ -24,45 +24,33 @@
             <option value="california">California</option>
         </select>
         <div class="city">
-            <h3>New York</h3>
-            <div class="date">
-                Saturday, 25 March 2023
+            <div>
+                <h3>New York</h3>
+                <div class="date">
+                    Saturday, 25 March 2023
+                </div>
             </div>
             <div class="time">
-                1:39 am
+                1:39 <small>am</small>
             </div>
         </div>
         <div class="city">
-            <h3>London</h3>
-            <div class="date">
-                Saturday, 25 March 2023
+            <div>
+                <h3>London</h3>
+                <div class="date">
+                    Saturday, 25 March 2023
+                </div>
             </div>
+
             <div class="time">
-                1:39 am
+                1:39 <small>am</small>
             </div>
         </div>
-        <div class="city">
-            <h3>Paris</h3>
-            <div class="date">
-                Saturday, 25 March 2023
-            </div>
-            <div class="time">
-                1:39 am
-            </div>
-        </div>
-        <div class="city">
-            <h3>California</h3>
-            <div class="date">
-                Saturday, 25 March 2023
-            </div>
-            <div class="time">
-                1:39 am
-            </div>
-        </div>
+        
     </div>
     
 
-    <footer>Coded by Amira Fareh and <a href="https://github.com/AmiraFareh/world-clock">open-sourced on Github</a></footer>
-</body>
+    <footer>Coded by <strong>Amira Fareh</strong> and <a href="https://github.com/AmiraFareh/world-clock">open-sourced on Github</a></footer>
+    </body> 
 <script src="javascript/index.js"></script>
 </html>
