--- a/index.html
+++ b/index.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Clock</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.42/moment-timezone-with-data-1970-2030.min.js"></script>
+  </head>
+  <body>
     <div class="container">
-        <h1>World Clock</h1>
-        <h2 class="current-time">
-            6:26:46 pm
-            <div class="current-timezone">
-                New Zealand Daylight Time
-            </div>
-           </h2>
-        <select name="cities" id="cities">
-            <option value="">Choose a city</option>
-            <option value="new-york">New York</option>
-            <option value="london">London</option>
-            <option value="paris">Paris</option>
-            <option value="california">California</option>
-        </select>
-        <div class="city">
-            <div>
-                <h3>New York</h3>
-                <div class="date">
-                    Saturday, 25 March 2023
-                </div>
-            </div>
-            <div class="time">
-                1:39 <small>am</small>
-            </div>
-        </div>
-        <div class="city">
-            <div>
-                <h3>London</h3>
-                <div class="date">
-                    Saturday, 25 March 2023
-                </div>
-            </div>
+      <h1>World Clock</h1>
+      <h2 class="current-time" id="current-time">6:26:46 <small>am</small></h2>
 
-            <div class="time">
-                1:39 <small>am</small>
-            </div>
+      <select name="cities" id="cities">
+        <option value="">Choose a city</option>
+        <option value="los-angeles">Los Angeles</option>
+        <option value="london">London</option>
+        <option value="paris">Paris</option>
+        <option value="new-york">New York</option>
+      </select>
+      <div class="city" id="los-angeles">
+        <div>
+          <h3>Los Angeles</h3>
+          <div class="date">Saturday, 25 March 2023</div>
         </div>
-        
+        <div class="time">1:39 <small>am</small></div>
+      </div>
+      <div class="city" id="auckland">
+        <div>
+          <h3>Auckland</h3>
+          <div class="date">Saturday, 25 March 2023</div>
+        </div>
+
+        <div class="time">1:39 <small>am</small></div>
+      </div>
     </div>
-    
 
-    <footer>Coded by <strong>Amira Fareh</strong> and <a href="https://github.com/AmiraFareh/world-clock">open-sourced on Github</a></footer>
-    </body> 
-<script src="javascript/index.js"></script>
+    <footer>
+      Coded by <strong>Amira Fareh</strong> and
+      <a
+        href="https://github.com/AmiraFareh/world-clock"
+        target="
+        "
+        >open-sourced on Github</a
+      >
+    </footer>
+  </body>
+  <script src="javascript/index.js"></script>
 </html>
