Updated select element by encapsulating it with an ID and changing the cities value to the time zones.

--- a/index.html
+++ b/index.html
@@ -14,27 +14,31 @@
       <h1>World Clock</h1>
       <h2 class="current-time" id="current-time">6:26:46 <small>am</small></h2>
 
-      <select name="cities" id="cities">
-        <option value="">Choose a city</option>
-        <option value="los-angeles">Los Angeles</option>
-        <option value="london">London</option>
-        <option value="paris">Paris</option>
-        <option value="new-york">New York</option>
+      <select id="city">
+        <option value="">Select a city..</option>
+        <option value="America/New_York">New York</option>
+        <option value="Europe/London">London</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Pacific/Auckland">Auckland</option>
+        <option value="Asia/Tokyo">Tokyo</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h3>Los Angeles</h3>
-          <div class="date">Saturday, 25 March 2023</div>
-        </div>
-        <div class="time">1:39 <small>am</small></div>
-      </div>
-      <div class="city" id="auckland">
-        <div>
-          <h3>Auckland</h3>
-          <div class="date">Saturday, 25 March 2023</div>
-        </div>
 
-        <div class="time">1:39 <small>am</small></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h3>Los Angeles</h3>
+            <div class="date">Saturday, 25 March 2023</div>
+          </div>
+          <div class="time">1:39 <small>am</small></div>
+        </div>
+        <div class="city" id="auckland">
+          <div>
+            <h3>Auckland</h3>
+            <div class="date">Saturday, 25 March 2023</div>
+          </div>
+
+          <div class="time">1:39 <small>am</small></div>
+        </div>
       </div>
     </div>
 
