--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h1>World Clock</h1>
       <h2 class="current-time" id="current-time">6:26:46 <small>am</small></h2>
-
+      <div id="current-timezone"></div>
       <select id="city">
         <option value="">Select a city..</option>
         <option value="America/New_York">New York</option>
